--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="./assets/favicon.png" />
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -26,6 +27,9 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="footer">
+      <a href="https://beian.miit.gov.cn/">蜀ICP备19003529号-3</a>
     </div>
   </body>
 </html>
