--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>worki.cn</title>
     <link rel="icon" href="./assets/favicon.png" />
     <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
